src/test/ui/byte-concat.stderr
error: cannot concatenate a byte string literal with string literals
  --> $DIR/byte-concat.rs:13:28
   |
LL |     let _ = concat!("abc", b"def", "ghi", b"jkl");
   |                     -----  ^^^^^^  -----  ^^^^^^ byte string literal
   |                     |      |       |
   |                     |      |       string literal
   |                     |      byte string literal
   |                     string literal
   |
   = help: do not mix byte string literals and string literals
help: you can use byte string literals
   |
LL |     let _ = concat!(b"abc", b"def", b"ghi", b"jkl");
   |                     ^               ^

error: aborting due to previous error

